# ddd-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ddd_framework/domain/: model.py
ddd_framework/infrastructure/persistance/: mongo.py
ddd_framework/utils/: types.py
utils/: types.py
